--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "motion": "^12.23.6",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
